# My_try0

./: CMakeLists.txt
Proj/try/: try.pro
src/: CMakeLists.txt  readIMG.cpp
